[package]
name = "cw-bonding"
version = {workspace = true}
authors = [""]
edition = "2018"
description = "Implement basic bonding curve to issue cw20 tokens "

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
integer-sqrt = "0.1.5"
integer-cbrt = "0.1.2"
rust_decimal = "1.10.1"
cw2 = "1.0.0"
cw20-base ={version = "1.0.0", features = ["library"]}
cw0 = { workspace = true }
cosmwasm-schema = { workspace = true }
cw20 = { workspace = true }
cosmwasm-std = { workspace = true }
cw-storage-plus = { workspace = true }
cw-controllers = { workspace = true }
cw-utils = { workspace = true }
cw-asset= { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
bonding-types={ workspace = true }

